[project]
name = "ebay-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MR-RITZY", email = "mrboffin01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "selenium>=4.38.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
app = "scr.ebay_scraping.main:app"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
